--- a/src/assets/css/components/episode-supporter.scss
+++ b/src/assets/css/components/episode-supporter.scss
@@ -44,6 +44,10 @@
       transform: scale(0.96) translateY(0);
       opacity: 0;
       transition: transform $timing $easing, opacity $timing $easing;
+
+      @media (max-width: $sm) {
+        left: -$spacing-border;
+      }
     }
 
     p {
