--- a/src/assets/css/components/header.scss
+++ b/src/assets/css/components/header.scss
@@ -15,10 +15,11 @@ header {
   padding: $spacing-6 $spacing-body-x $spacing-3;
   transition: margin $timing $easing;
   z-index: 999;
+  transform: translate3d(0,0,0);
 
   @media (max-width: $sm) {
     top: 0 !important;
-    padding: $spacing-2 $spacing-4;
+    padding: $spacing-2 $spacing-border;
   }
 
   > .wrapper {
@@ -60,18 +61,19 @@ header {
         position: fixed;
         top: 0;
         left: 0;
-        width: 100vw;
+        width: calc(100vw - #{$spacing-border}*2);
         height: 100vh;
         background-color: $black;
         display: flex;
         justify-content: center;
         flex-direction: column;
-        font-size: 2rem;
+        font-size: $font-size-header;
         line-height: 4rem;
-        transform: scaleY(0);
+        transform: scaleY(0) translate3d(0, 0, 0);
         transform-origin: top;
-        transition: transform $timing * 1.4 $easing;
+        transition: transform $timing * 2 $easing;
         pointer-events: none;
+        // z-index: 999999999999999999;
 
         .item {
           opacity: 0;
@@ -80,7 +82,7 @@ header {
       }
 
       &.-desktop.-mobile-active {
-        transform: scaleY(1);
+        transform: scaleY(1) translate3d(0, 0, 0);
         z-index: 100;
         pointer-events: all;
 
@@ -102,6 +104,10 @@ header {
 
     > .item {
       padding-left: $spacing-2;
+
+      @media (max-width: $sm) {
+        padding-left: $spacing-border;
+      }
     }
   }
 }
