--- a/src/assets/css/settings/vars.scss
+++ b/src/assets/css/settings/vars.scss
@@ -5,7 +5,7 @@ $font-size-base-xxl: 30px;
 $line-height-base: 1.5;
 
 $font-size-header: 9vw;
-$line-height-header: 1;
+$line-height-header: 1.2;
 $font-size-regular: 1rem;
 $font-size-text: 1.25rem;
 $font-size-eyebrow: 0.75rem;
@@ -14,7 +14,7 @@ $line-height-quote: 1.25;
 $font-size-part: 4rem;
 
 // spacing
-$spacing-border: $font-size-base;
+$spacing-border: 24px;
 $spacing-body-x: 5vw;
 $spacing-body-y: 4vw;
 
